force-app/main/default/objects/Deadline_Milestone__c/Deadline_Milestone__c.object-meta.xml
<CustomObject>
    <label>Deadline Milestone</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Milestone Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deadline Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>