force-app/main/default/objects/Deadline_Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Upcoming</fullName><default>true</default><label>Upcoming</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>