force-app/main/default/objects/Deadline_Milestone__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Deadline Milestones</relationshipLabel>
    <relationshipName>Deadline_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>