force-app/main/default/objects/Deadline_Milestone__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Age-based</fullName><default>false</default><label>Age-based</label></value>
            <value><fullName>Program-based</fullName><default>false</default><label>Program-based</label></value>
            <value><fullName>Application-based</fullName><default>false</default><label>Application-based</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>